feat(front-end):Add logical components

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,9 @@ figure {
   height: auto;
   border-radius: 30px;
 }
+.height-bg {
+  height: auto !important;
+}
 .sidebar {
   width: 240px; 
   height: 100vh;
